[package]
name = "matches"
version = "0.1.8"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT"
repository = "https://github.com/SimonSapin/rust-std-candidates"
description = "A macro to evaluate, as a boolean, whether an expression matches a pattern."
documentation = "https://docs.rs/matches/"
edition = "2018"

exclude = ["/tests/sgx/*"]

[lib]
name = "matches"
path = "lib.rs"

[dependencies.sgx_tstd]
git = "https://github.com/apache/teaclave-sgx-sdk"
rev = "v1.1.1"

[dependencies.sgx_tunittest]
git = "https://github.com/apache/teaclave-sgx-sdk"
optional = true
rev = "v1.1.1"

[features]
default = []
testing = ["sgx_tunittest"]